Add support for detecting the connection status.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -33,5 +33,9 @@
     "shareButton": "Invite other players",
     "gameCode": "Game code: {{groupId}}",
     "copyButton": "Copy link"
+  },
+  "network-status": {
+    "alt-ok": "Connection ok icon",
+    "alt-error": "Connection error icon"
   }
 }
